fix white space

--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300&display=swap');
 
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
-}
-
-
 * {
   box-sizing:border-box;
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 body {
@@ -33,7 +24,7 @@ h1 {
 
 .app{
   width: 100%;
-  height: 100vh;
+  height: auto;
   position: relative;
   background-color: rgba(0,0,0,0.5);
   color: white;
@@ -99,7 +90,7 @@ h1 {
   text-align: center;
   width: 100%;
   margin: 1rem auto;
-  padding: 1rem;
+  padding: 2rem;
   border-radius: 15px;
   background-color: rgba(255, 255, 255, 0.2);
 }
